# oxford_colors

./: .gitignore  README.md  UPLOAD_INSTRUCTIONS.md  pyproject.toml  setup.cfg  test_install.py
examples/: gallery.py
src/oxford_colors/: __init__.py  graph_container.py  oxford_colors.py
src/oxford_colors.egg-info/: PKG-INFO  SOURCES.txt
tests/: test.ipynb  test_oxford_colors.py
