[metadata]
name = oxford_colors
version = 0.1.0
description = A color pallete for matplotlib derived from the Oxford color themes
long_description = file: README.md
long_description_content_type = text/markdown
author = Hakam Atassi
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
requires-python = >=3.8

[options]
package_dir =
    = src
packages = find:
install_requires =
    # list runtime deps here, e.g. requests>=2.0

[options.packages.find]
where = src
